2003-08-14  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/FrenchRepublic.py: Insert encoding line because non-ascii
	charatcers are used. This behavior is deprecated and causes warnings 
	in python 2.3.
	* src/const.py.in: Likewise. 
	* src/FamilyView.py: Likewise. 
	* src/SelectChild.py: Likewise.
	* src/plugins/rel_ru.py: Likewise.

2003-08-14  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DbPrompter.py: removed #! at top of file
	* src/gramps.py: removed #! at top of file
	* src/EditSource.py: removed #! at top of file

2003-08-14  Alexandre Duret-Lutz  <adl@gnu.org>
	* configure.in: Check for include directory of $PYTHON, not $PYTHON22.
	Set PYTHON_CPPFLAGS accordingly.  Do not set $PYTHON22 and
	$P22_INCLUDES, they are not used anymore.
	* src/Makefile.am (GVFSINC): Remove, unused.
	(intl22.so, grampslib.so): Adjust to use $P22_INCLUDES.

2003-08-13  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: implement a basic history mechanism
	* src/gramps.glade: add back and forward buttons

2003-08-12  Don Allingham  <dallingham@users.sourceforge.net>
	* src/Pedegree.py: if only one child exists, don't display popup
	window when left arrow button is clicked.
	* src/FamilyView.py: if only one child exists, choose the child
	event if not selected if the child arrow button is clicked
	* src/AddMedia.py: set title for image select dialog
	* src/DbPrompter.py: set default path in database file entry box
	* src/gramps_main.py: set default path in database file entry box
	* src/ImageSelect.py: set default path in image select file entry box,
	keep track of last directory used
	* src/Report.py: set default path in report file entry box
	* src/imagesel.glade: enlarge image select dialog box

2003-08-12  Lorenzo Cappelletti  <lorenzo.cappelletti@email.it>
	* src/po/it.po: updated Italian translation

2003-08-11  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: apply the filter after a load of the database,